objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CheckOutDate__c</fullName>
        <label>Check Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckOutDistanceFromRecordMi__c</fullName>
        <label>Check Out Distance From Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is used by the &quot;Perfect Date Wizard&quot; SE tool to adjust the Due Date on a task or event.</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistanceFromRecordMi__c</fullName>
        <label>Distance from Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Resource Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Check_Out_Latitude__c</fullName>
        <description>SDO MAPS Activity Latitude field for capturing Task/Event location details 02-06-23</description>
        <label>Check Out Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Check_Out_Longitude__c</fullName>
        <description>SDO MAPS Activity Longitude field for capturing Task/Event location details 02-06-23</description>
        <label>Check Out Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Created_Latitude__c</fullName>
        <description>SDO MAPS check in/out created location field 02-02-23 AB</description>
        <label>Created Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Created_Longitude__c</fullName>
        <description>SDO MAPS check-in/out created location field 02-02-23 AB</description>
        <label>Created Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Follow_Up_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_How_Did_It_Go__c</fullName>
        <label>How Did It Go?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Great</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Horrible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_MAPS_What_Did_I_Do__c</fullName>
        <label>What Did I Do?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Training/Product Demo</fullName>
                </value>
                <value>
                    <fullName>Regular Cadence Meeting</fullName>
                </value>
                <value>
                    <fullName>Introduction Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_MAPS_What_Did_I_Show__c</fullName>
        <label>What Did I Show?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product A</fullName>
                </value>
                <value>
                    <fullName>Product B</fullName>
                </value>
                <value>
                    <fullName>Product C</fullName>
                </value>
                <value>
                    <fullName>Product D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Who_Did_I_Meet_With__c</fullName>
        <label>Who Did I Meet With?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Maps_Safety_Checklist_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used in the Safety Checklist Flow. Who: Dylan Friddle &amp; Aaron Bendickson. When: Aug 30,2021</description>
        <label>Safety Checklist Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_On_Site_Minutes__c</fullName>
        <description>Added May 2021 to support the Salesforce Maps Dashboards.</description>
        <label>Time On Site (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This custom field is required to expose the Activity Type field to reporting.  It is updated automatically by a trigger called &quot;qbranch_activity_type_update&quot;.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                    <default>true</default>
                    <label>Call</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Prep</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Calendar_Background_Color__c</fullName>
        <defaultValue>&quot;Blue&quot;</defaultValue>
        <description>CSS color code for event background color in calendar view</description>
        <inlineHelpText>CSS color code for event background color in calendar view</inlineHelpText>
        <label>Calendar Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Calendar_Border_Color__c</fullName>
        <defaultValue>&quot;Blue&quot;</defaultValue>
        <description>CSS color code for event border color in calendar view</description>
        <inlineHelpText>CSS color code for event border color in calendar view</inlineHelpText>
        <label>Calendar Border Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Calendar_Rendering__c</fullName>
        <defaultValue>&quot;Normal&quot;</defaultValue>
        <description>Mode to render event with on Calendar: The rendering type of this event. Can be empty (normal rendering), &quot;background&quot;, or &quot;inverse-background&quot;</description>
        <inlineHelpText>Mode to render event with on Calendar: The rendering type of this event. Can be empty (normal rendering), &quot;background&quot;, or &quot;inverse-background&quot;</inlineHelpText>
        <label>Calendar Rendering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Background</fullName>
                </value>
                <value>
                    <fullName>Inverse-Background</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cccalendar__Calendar_Text_Color__c</fullName>
        <defaultValue>&quot;White&quot;</defaultValue>
        <description>CSS color code for event text color in calendar view</description>
        <inlineHelpText>CSS color code for event text color in calendar view</inlineHelpText>
        <label>Calendar Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Display_Events_Local_Timezone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to display event&apos;s local timezone in event details</description>
        <inlineHelpText>Check to display event&apos;s local timezone in event details</inlineHelpText>
        <label>Display Event&apos;s Local Timezone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cccalendar__Event_Icon_Name__c</fullName>
        <defaultValue>&quot;utility:events&quot;</defaultValue>
        <description>SLDS icon name for the event, from http://www.lightningdesignsystem.com/icons/. Example: utility:events</description>
        <inlineHelpText>SLDS icon name for the event, from http://www.lightningdesignsystem.com/icons/. Example: utility:events</inlineHelpText>
        <label>Event Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Event_URL_2_Open_in_Same_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event URL 2 Open in Same Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cccalendar__Event_URL_2__c</fullName>
        <description>Button link on Event</description>
        <inlineHelpText>Button link on Event</inlineHelpText>
        <label>Event URL 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Event_URL_Open_in_Same_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event URL Open in Same Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cccalendar__Event_URL_Text_2__c</fullName>
        <description>Text to display on button linking to event URL field</description>
        <inlineHelpText>Text to display on button linking to event URL field</inlineHelpText>
        <label>Event URL Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Event_URL_Text__c</fullName>
        <description>Text to display on button linking to event URL field</description>
        <inlineHelpText>Text to display on button linking to event URL field</inlineHelpText>
        <label>Event URL Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Event_URL__c</fullName>
        <description>Button link on Event</description>
        <inlineHelpText>Button link on Event</inlineHelpText>
        <label>Event URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Image_URL__c</fullName>
        <description>URL for Event Image, to be used for Tile Display</description>
        <inlineHelpText>URL for Event Image, to be used for Tile Display</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cccalendar__Local_Timezone__c</fullName>
        <description>Specify event&apos;s local timezone. Required if Display event&apos;s local timezone is checked</description>
        <inlineHelpText>Specify event&apos;s local timezone. Required if Display event&apos;s local timezone is checked</inlineHelpText>
        <label>Local Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cccalendar__IANA_Timezones</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>db_days_ActivityDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>ActivityDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_ActivityDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>ActivityDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_CheckOutDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>CheckOutDate__c db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_EndDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>EndDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_RecurrenceStartDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>RecurrenceStartDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_ReminderDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>ReminderDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_hours_StartDateTime__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>StartDateTime db hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__WA_AdvRouteWaypoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Advanced Route Waypoint</description>
        <label>Maps Advanced Route Waypoint</label>
        <referenceTo>maps__AdvRouteWaypoint__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>